--- a/news_app/pubspec.yaml
+++ b/news_app/pubspec.yaml
@@ -65,9 +65,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - images/dev1.jpg
-    - images/dev2.png
-    - images/dev3.jpg
+    - images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
